--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,3 @@
-RewriteEngine On
+RewriteEngine on
 RewriteCond %{REQUEST_URI}  !(\.png|\.jpg|\.webp|\.gif|\.jpeg|\.zip|\.css|\.map|\.svg|\.woff2|\.js|\.pdf)$
 RewriteRule (.*) index.php [QSA,L]
